--- a/linux/po/appstream.pot
+++ b/linux/po/appstream.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2023-07-10 13:24+0200\n"
+"POT-Creation-Date: 2023-07-10 19:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 
 #. (itstool) path: component/summary
 #: org.hydrogenmusic.hydrogen.metainfo.xml.in:7
-msgid "The advanced drum machineX"
+msgid "The advanced drum machine"
 msgstr ""
 
 #. (itstool) path: description/p
