--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.4
+	* Added
+		- MIDI and OSC commands
+				- `CLEAR_INSTRUMENT` - to remove all notes of the selected pattern
+				  associated with the provided instrument number.
+				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
 	* Fixed
 		- Fix potential segfault on ill-formated notes in .h2song files.
 		- Fix buzzing sound during startup when using Port Audio (#1932).
