--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 				- `CLEAR_INSTRUMENT` - to remove all notes of the selected pattern
 				  associated with the provided instrument number.
 				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
+	* Changed
+		- Virtual keyboard strokes are now mapped exactly as incoming MIDI `NOTE_ON`
+			events (respecting both "Use output note as input note" and hihat pressure
+			groups). But do not trigger associated actions (#1770).
 	* Fixed
 		- Fix potential segfault on ill-formated notes in .h2song files.
 		- Fix buzzing sound during startup when using Port Audio (#1932).
