--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 				- `CLEAR_INSTRUMENT` - to remove all notes of the selected pattern
 				  associated with the provided instrument number.
 				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
+		- OSC commands
+				- `NOTE_ON` and `NOTE_OFF` which are handled like incoming MIDI events
+				  without triggering their associated actions.
 	* Changed
 		- Virtual keyboard strokes are now mapped exactly as incoming MIDI `NOTE_ON`
 			events (respecting both "Use output note as input note" and hihat pressure
