--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 		- Fix potential segfault on ill-formated notes in .h2song files.
 		- Fix buzzing sound during startup when using Port Audio (#1932).
 		- Fix build failure without precompiled headers (e.g. on Gentoo) (#1944)
+		- Fix MIDI, WAV, and LilyPond export with with non-ASCII filenames on
+			Windows (#1957). Import and export of drumkits can, however, still fail if
+			system encoding is not UTF-8.
 
 2024-01-12 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.3
